generated/BasaltParser.cpp

// Generated from BasaltParser.g4 by ANTLR 4.9.2


#include "BasaltParserListener.h"
#include "BasaltParserVisitor.h"

#include "BasaltParser.h"


using namespace antlrcpp;
using namespace antlr4;

BasaltParser::BasaltParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

BasaltParser::~BasaltParser() {
  delete _interpreter;
}

std::string BasaltParser::getGrammarFileName() const {
  return "BasaltParser.g4";
}

const std::vector<std::string>& BasaltParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& BasaltParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

BasaltParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::ProgramContext::EOF() {
  return getToken(BasaltParser::EOF, 0);
}

std::vector<BasaltParser::DefinitionContext *> BasaltParser::ProgramContext::definition() {
  return getRuleContexts<BasaltParser::DefinitionContext>();
}

BasaltParser::DefinitionContext* BasaltParser::ProgramContext::definition(size_t i) {
  return getRuleContext<BasaltParser::DefinitionContext>(i);
}


size_t BasaltParser::ProgramContext::getRuleIndex() const {
  return BasaltParser::RuleProgram;
}

void BasaltParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void BasaltParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any BasaltParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::ProgramContext* BasaltParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, BasaltParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(215);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << BasaltParser::STRUCT)
      | (1ULL << BasaltParser::UNION)
      | (1ULL << BasaltParser::FUNC)
      | (1ULL << BasaltParser::VAR)
      | (1ULL << BasaltParser::CONST))) != 0)) {
      setState(212);
      definition();
      setState(217);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(218);
    match(BasaltParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefinitionContext ------------------------------------------------------------------

BasaltParser::DefinitionContext::DefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

BasaltParser::StructDefinitionContext* BasaltParser::DefinitionContext::structDefinition() {
  return getRuleContext<BasaltParser::StructDefinitionContext>(0);
}

BasaltParser::UnionDefinitionContext* BasaltParser::DefinitionContext::unionDefinition() {
  return getRuleContext<BasaltParser::UnionDefinitionContext>(0);
}

BasaltParser::FunctionDefinitionContext* BasaltParser::DefinitionContext::functionDefinition() {
  return getRuleContext<BasaltParser::FunctionDefinitionContext>(0);
}

BasaltParser::VariableDeclarationContext* BasaltParser::DefinitionContext::variableDeclaration() {
  return getRuleContext<BasaltParser::VariableDeclarationContext>(0);
}

BasaltParser::ConstDeclarationContext* BasaltParser::DefinitionContext::constDeclaration() {
  return getRuleContext<BasaltParser::ConstDeclarationContext>(0);
}


size_t BasaltParser::DefinitionContext::getRuleIndex() const {
  return BasaltParser::RuleDefinition;
}

void BasaltParser::DefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefinition(this);
}

void BasaltParser::DefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefinition(this);
}


antlrcpp::Any BasaltParser::DefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitDefinition(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::DefinitionContext* BasaltParser::definition() {
  DefinitionContext *_localctx = _tracker.createInstance<DefinitionContext>(_ctx, getState());
  enterRule(_localctx, 2, BasaltParser::RuleDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(225);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case BasaltParser::STRUCT: {
        enterOuterAlt(_localctx, 1);
        setState(220);
        structDefinition();
        break;
      }

      case BasaltParser::UNION: {
        enterOuterAlt(_localctx, 2);
        setState(221);
        unionDefinition();
        break;
      }

      case BasaltParser::FUNC: {
        enterOuterAlt(_localctx, 3);
        setState(222);
        functionDefinition();
        break;
      }

      case BasaltParser::VAR: {
        enterOuterAlt(_localctx, 4);
        setState(223);
        variableDeclaration();
        break;
      }

      case BasaltParser::CONST: {
        enterOuterAlt(_localctx, 5);
        setState(224);
        constDeclaration();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ArrowContext ------------------------------------------------------------------

BasaltParser::ArrowContext::ArrowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::ArrowContext::ARROW() {
  return getToken(BasaltParser::ARROW, 0);
}


size_t BasaltParser::ArrowContext::getRuleIndex() const {
  return BasaltParser::RuleArrow;
}

void BasaltParser::ArrowContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterArrow(this);
}

void BasaltParser::ArrowContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitArrow(this);
}


antlrcpp::Any BasaltParser::ArrowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitArrow(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::ArrowContext* BasaltParser::arrow() {
  ArrowContext *_localctx = _tracker.createInstance<ArrowContext>(_ctx, getState());
  enterRule(_localctx, 4, BasaltParser::RuleArrow);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(227);
    match(BasaltParser::ARROW);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PointerDereferenceContext ------------------------------------------------------------------

BasaltParser::PointerDereferenceContext::PointerDereferenceContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::PointerDereferenceContext::HASHTAG() {
  return getToken(BasaltParser::HASHTAG, 0);
}


size_t BasaltParser::PointerDereferenceContext::getRuleIndex() const {
  return BasaltParser::RulePointerDereference;
}

void BasaltParser::PointerDereferenceContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPointerDereference(this);
}

void BasaltParser::PointerDereferenceContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPointerDereference(this);
}


antlrcpp::Any BasaltParser::PointerDereferenceContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitPointerDereference(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::PointerDereferenceContext* BasaltParser::pointerDereference() {
  PointerDereferenceContext *_localctx = _tracker.createInstance<PointerDereferenceContext>(_ctx, getState());
  enterRule(_localctx, 6, BasaltParser::RulePointerDereference);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(229);
    match(BasaltParser::HASHTAG);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PointerSymbolContext ------------------------------------------------------------------

BasaltParser::PointerSymbolContext::PointerSymbolContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::PointerSymbolContext::HASHTAG() {
  return getToken(BasaltParser::HASHTAG, 0);
}


size_t BasaltParser::PointerSymbolContext::getRuleIndex() const {
  return BasaltParser::RulePointerSymbol;
}

void BasaltParser::PointerSymbolContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPointerSymbol(this);
}

void BasaltParser::PointerSymbolContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPointerSymbol(this);
}


antlrcpp::Any BasaltParser::PointerSymbolContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitPointerSymbol(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::PointerSymbolContext* BasaltParser::pointerSymbol() {
  PointerSymbolContext *_localctx = _tracker.createInstance<PointerSymbolContext>(_ctx, getState());
  enterRule(_localctx, 8, BasaltParser::RulePointerSymbol);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(231);
    match(BasaltParser::HASHTAG);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SliceSymbolContext ------------------------------------------------------------------

BasaltParser::SliceSymbolContext::SliceSymbolContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::SliceSymbolContext::HASHTAG() {
  return getToken(BasaltParser::HASHTAG, 0);
}


size_t BasaltParser::SliceSymbolContext::getRuleIndex() const {
  return BasaltParser::RuleSliceSymbol;
}

void BasaltParser::SliceSymbolContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSliceSymbol(this);
}

void BasaltParser::SliceSymbolContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSliceSymbol(this);
}


antlrcpp::Any BasaltParser::SliceSymbolContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitSliceSymbol(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::SliceSymbolContext* BasaltParser::sliceSymbol() {
  SliceSymbolContext *_localctx = _tracker.createInstance<SliceSymbolContext>(_ctx, getState());
  enterRule(_localctx, 10, BasaltParser::RuleSliceSymbol);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(233);
    match(BasaltParser::HASHTAG);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AddressOfContext ------------------------------------------------------------------

BasaltParser::AddressOfContext::AddressOfContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::AddressOfContext::BITAND() {
  return getToken(BasaltParser::BITAND, 0);
}


size_t BasaltParser::AddressOfContext::getRuleIndex() const {
  return BasaltParser::RuleAddressOf;
}

void BasaltParser::AddressOfContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAddressOf(this);
}

void BasaltParser::AddressOfContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAddressOf(this);
}


antlrcpp::Any BasaltParser::AddressOfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitAddressOf(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::AddressOfContext* BasaltParser::addressOf() {
  AddressOfContext *_localctx = _tracker.createInstance<AddressOfContext>(_ctx, getState());
  enterRule(_localctx, 12, BasaltParser::RuleAddressOf);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(235);
    match(BasaltParser::BITAND);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SquareBracketsOpenContext ------------------------------------------------------------------

BasaltParser::SquareBracketsOpenContext::SquareBracketsOpenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::SquareBracketsOpenContext::LBRACK() {
  return getToken(BasaltParser::LBRACK, 0);
}


size_t BasaltParser::SquareBracketsOpenContext::getRuleIndex() const {
  return BasaltParser::RuleSquareBracketsOpen;
}

void BasaltParser::SquareBracketsOpenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSquareBracketsOpen(this);
}

void BasaltParser::SquareBracketsOpenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSquareBracketsOpen(this);
}


antlrcpp::Any BasaltParser::SquareBracketsOpenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitSquareBracketsOpen(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::SquareBracketsOpenContext* BasaltParser::squareBracketsOpen() {
  SquareBracketsOpenContext *_localctx = _tracker.createInstance<SquareBracketsOpenContext>(_ctx, getState());
  enterRule(_localctx, 14, BasaltParser::RuleSquareBracketsOpen);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(237);
    match(BasaltParser::LBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SquareBracketsCloseContext ------------------------------------------------------------------

BasaltParser::SquareBracketsCloseContext::SquareBracketsCloseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::SquareBracketsCloseContext::RBRACK() {
  return getToken(BasaltParser::RBRACK, 0);
}


size_t BasaltParser::SquareBracketsCloseContext::getRuleIndex() const {
  return BasaltParser::RuleSquareBracketsClose;
}

void BasaltParser::SquareBracketsCloseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSquareBracketsClose(this);
}

void BasaltParser::SquareBracketsCloseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSquareBracketsClose(this);
}


antlrcpp::Any BasaltParser::SquareBracketsCloseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitSquareBracketsClose(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::SquareBracketsCloseContext* BasaltParser::squareBracketsClose() {
  SquareBracketsCloseContext *_localctx = _tracker.createInstance<SquareBracketsCloseContext>(_ctx, getState());
  enterRule(_localctx, 16, BasaltParser::RuleSquareBracketsClose);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(239);
    match(BasaltParser::RBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParenthesysOpenContext ------------------------------------------------------------------

BasaltParser::ParenthesysOpenContext::ParenthesysOpenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::ParenthesysOpenContext::LPAREN() {
  return getToken(BasaltParser::LPAREN, 0);
}


size_t BasaltParser::ParenthesysOpenContext::getRuleIndex() const {
  return BasaltParser::RuleParenthesysOpen;
}

void BasaltParser::ParenthesysOpenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenthesysOpen(this);
}

void BasaltParser::ParenthesysOpenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenthesysOpen(this);
}


antlrcpp::Any BasaltParser::ParenthesysOpenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitParenthesysOpen(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::ParenthesysOpenContext* BasaltParser::parenthesysOpen() {
  ParenthesysOpenContext *_localctx = _tracker.createInstance<ParenthesysOpenContext>(_ctx, getState());
  enterRule(_localctx, 18, BasaltParser::RuleParenthesysOpen);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(241);
    match(BasaltParser::LPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParenthesysCloseContext ------------------------------------------------------------------

BasaltParser::ParenthesysCloseContext::ParenthesysCloseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::ParenthesysCloseContext::RPAREN() {
  return getToken(BasaltParser::RPAREN, 0);
}


size_t BasaltParser::ParenthesysCloseContext::getRuleIndex() const {
  return BasaltParser::RuleParenthesysClose;
}

void BasaltParser::ParenthesysCloseContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParenthesysClose(this);
}

void BasaltParser::ParenthesysCloseContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParenthesysClose(this);
}


antlrcpp::Any BasaltParser::ParenthesysCloseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitParenthesysClose(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::ParenthesysCloseContext* BasaltParser::parenthesysClose() {
  ParenthesysCloseContext *_localctx = _tracker.createInstance<ParenthesysCloseContext>(_ctx, getState());
  enterRule(_localctx, 20, BasaltParser::RuleParenthesysClose);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(243);
    match(BasaltParser::RPAREN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CurlyBracketsOpenContext ------------------------------------------------------------------

BasaltParser::CurlyBracketsOpenContext::CurlyBracketsOpenContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::CurlyBracketsOpenContext::LBRACE() {
  return getToken(BasaltParser::LBRACE, 0);
}


size_t BasaltParser::CurlyBracketsOpenContext::getRuleIndex() const {
  return BasaltParser::RuleCurlyBracketsOpen;
}

void BasaltParser::CurlyBracketsOpenContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCurlyBracketsOpen(this);
}

void BasaltParser::CurlyBracketsOpenContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<BasaltParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCurlyBracketsOpen(this);
}


antlrcpp::Any BasaltParser::CurlyBracketsOpenContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<BasaltParserVisitor*>(visitor))
    return parserVisitor->visitCurlyBracketsOpen(this);
  else
    return visitor->visitChildren(this);
}

BasaltParser::CurlyBracketsOpenContext* BasaltParser::curlyBracketsOpen() {
  CurlyBracketsOpenContext *_localctx = _tracker.createInstance<CurlyBracketsOpenContext>(_ctx, getState());
  enterRule(_localctx, 22, BasaltParser::RuleCurlyBracketsOpen);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(245);
    match(BasaltParser::LBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CurlyBracketsCloseContext ------------------------------------------------------------------

BasaltParser::CurlyBracketsCloseContext::CurlyBracketsCloseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* BasaltParser::CurlyBracketsCloseContext::RBRACE() {
  return getToken(BasaltParser::RBRACE, 0);
}

